<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    >

   	<TextView
   	    android:id="@+id/title"
   	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/title"
        />
   	
    <TextView
        android:id="@+id/instructions"
        android:layout_below="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
    	/>
    
    <LinearLayout
        android:id="@+id/input_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:layout_below="@id/instructions"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <!-- Input line: A*x^2 + B*x + C -->
	    <EditText
	        android:id="@+id/Ax2"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:hint="@string/x2_hint" 
	        />
	    <TextView
	        android:id="@+id/x2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/timesx2plus"
	        />
	    <EditText
	        android:id="@+id/Bx"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:hint="@string/x_hint" 
	        />
	     <TextView
	        android:id="@+id/x"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/timesxplus"
	        />
	     <EditText
	         android:id="@+id/C"
	         android:layout_width="0dp"
	         android:layout_weight="1"
	         android:layout_height="wrap_content"
	         android:hint="@string/const_hint" 
	         />
    </LinearLayout>

    <Button
        android:id="@+id/solve_button"
        android:layout_below="@id/input_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solve"
        android:onClick="solve" />
    
    <TextView
        android:id="@+id/solution"
        android:layout_toRightOf="@id/solve_button"
        android:layout_alignBottom="@id/solve_button"
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/testsolution"
        />
	    
</RelativeLayout>
